feat: добавление футера

--- a/index.html
+++ b/index.html
@@ -1,63 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kitty shop</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-    <div class="container">
-      <div class="header__logo">KITTY</div>
-      <nav>
-        <ul class="navbar_menu">
-          <li><a href="#">Каталог</a></li>
-          <li><a href="#">Корзина</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-    <main>
-        <section class="catalog">
-    <h2>Каталог</h2>
-    <div class="catalog-list">
-      <div class="card">
-        <img src="https://placekitten.com/200/200" alt="Котик">
-        <h3>Мягкая лежанка</h3>
-        <p>Уютная лежанка для котиков</p>
-        <span class="price">1200 ₽</span>
-        <button>В корзину</button>
-      </div>
-      <div class="card">
-        <img src="https://placekitten.com/201/200" alt="Котик">
-        <h3>Игрушка-мышка</h3>
-        <p>Любимая игрушка котят</p>
-        <span class="price">300 ₽</span>
-        <button>В корзину</button>
-      </div>
-    </div>
-  </section>
-
-  <!-- Корзина -->
-  <section class="cart">
-    <h2>Корзина</h2>
-    <div class="cart-list">
-      <div class="card">
-        <img src="https://placekitten.com/200/201" alt="Котик">
-        <h3>Мягкая лежанка</h3>
-        <p>1 шт.</p>
-        <span class="price">1200 ₽</span>
-        <div class="cart-actions">
-          <button>-</button>
-          <button>+</button>
-          <button class="remove">Удалить</button>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Kitty shop</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <header>
+        <div class="container">
+        <div class="header__logo">KITTY</div>
+        <nav>
+            <ul class="navbar_menu">
+            <li><a href="#">Каталог</a></li>
+            <li><a href="#">Корзина</a></li>
+            </ul>
+        </nav>
         </div>
-      </div>
-    </div>
-  </section>
-    </main>
-    <footer></footer>
-    <script src="main.js"></script>
-</body>
+    </header>
+        <main>
+            <section class="catalog">
+            <h2>Каталог</h2>
+            <div class="catalog-list">
+            <div class="card">
+                <img src="https://placekitten.com/200/200" alt="Котик">
+                <h3>Мягкая лежанка</h3>
+                <p>Уютная лежанка для котиков</p>
+                <span class="price">1200 ₽</span>
+                <button>В корзину</button>
+            </div>
+            <div class="card">
+                <img src="https://placekitten.com/201/200" alt="Котик">
+                <h3>Игрушка-мышка</h3>
+                <p>Любимая игрушка котят</p>
+                <span class="price">300 ₽</span>
+                <button>В корзину</button>
+            </div>
+            </div>
+    </section>
+
+    <!-- Корзина -->
+    <section class="cart">
+        <h2>Корзина</h2>
+        <div class="cart-list">
+        <div class="card">
+            <img src="https://placekitten.com/200/201" alt="Котик">
+            <h3>Мягкая лежанка</h3>
+            <p>1 шт.</p>
+            <span class="price">1200 ₽</span>
+            <div class="cart-actions">
+            <button>-</button>
+            <button>+</button>
+            <button class="remove">Удалить</button>
+            </div>
+        </div>
+        </div>
+    </section>
+        </main>
+        <footer>
+            &copy; 2025 Kitty Shop. Все права защищены.
+        </footer>
+        <script src="main.js"></script>
+    </body>
 </html>
