feat: Генерация карточек товара из js

--- a/index.html
+++ b/index.html
@@ -21,21 +21,8 @@
         <main>
             <section class="catalog">
             <h2>Каталог</h2>
-            <div class="catalog-list">
-            <div class="card">
-                <img src="https://placekitten.com/200/200" alt="Котик">
-                <h3>Мягкая лежанка</h3>
-                <p>Уютная лежанка для котиков</p>
-                <span class="price">1200 ₽</span>
-                <button>В корзину</button>
-            </div>
-            <div class="card">
-                <img src="https://placekitten.com/201/200" alt="Котик">
-                <h3>Игрушка-мышка</h3>
-                <p>Любимая игрушка котят</p>
-                <span class="price">300 ₽</span>
-                <button>В корзину</button>
-            </div>
+            <div class="catalog-list" id="catalog-list">
+            
             </div>
     </section>
 
