feat: корзина и сопутствующая ей логика

--- a/index.html
+++ b/index.html
@@ -29,18 +29,8 @@
     <!-- Корзина -->
     <section class="cart">
         <h2>Корзина</h2>
-        <div class="cart-list">
-        <div class="card">
-            <img src="https://placekitten.com/200/201" alt="Котик">
-            <h3>Мягкая лежанка</h3>
-            <p>1 шт.</p>
-            <span class="price">1200 ₽</span>
-            <div class="cart-actions">
-            <button>-</button>
-            <button>+</button>
-            <button class="remove">Удалить</button>
-            </div>
-        </div>
+        <div class="basket-list">
+        
         </div>
     </section>
         </main>
